crop_area now has greater than photo_containers z-index ( fixes #2002 )

--- a/web/css/main_admin.css
+++ b/web/css/main_admin.css
@@ -640,4 +640,5 @@ div.member_flags table {
     cursor: move;
     padding: 0 20px 20px 20px;
     min-height: 720px;
+    z-index: 100;
 }
